kubernetes/frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: faces-frontend
    istio-injection: enabled
    name: faces-frontend
  name: faces-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: faces-frontend
  name: faces-frontend
  namespace: faces-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faces-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: faces-frontend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: faces-frontend
        image: registry.phight.club/fredrik/faces-frontend:2
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: faces-frontend
  labels:
    app: faces-frontend
  namespace: faces-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: faces-frontend
