kubernetes/virtualservice-aws.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: faces
  name: faces
  namespace: default
spec:
  gateways:
  - spccc-ingress-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/api/"
    rewrite:
      authority: faces-backend.faces-backend.svc.nety4u4zwg.remote
    route:
    - destination:
        host: svc.nety4u4zwg.remote
        port:
          number: 443
  - match:
    - uri:
        prefix: "/"
    - uri:
        prefix: "/static"
    route:
    - destination:
        host: faces-frontend.faces-frontend.svc.cluster.local
        port:
          number: 8080
