kubernetes/virtualservice-google.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: faces
  name: faces
  namespace: default
spec:
  gateways:
  - spccc-ingress-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/api/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: faces-backend.faces-backend.svc.cluster.local
        port:
          number: 5000
