kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: faces
  name: faces
  namespace: default
spec:
  gateways:
  - faces-gateway
  hosts:
  - faces.phight.club
  http:
  - match:
    - uri:
        prefix: "/api/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: faces-backend.faces-backend.svc.cluster.local
        port:
          number: 5000
  - match:
    - uri:
        prefix: "/"
    - uri:
        prefix: "/static"
    route:
    - destination:
        host: faces-frontend.faces-frontend.svc.cluster.local
        port:
          number: 8080
